--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,12 @@ dependencies {
     implementation 'org.codehaus.groovy:groovy-all:2.5.8'
         compileOnly 'dev.gradleplugins:gradle-api:2.14.1'
 
+	testImplementation('dev.gradleplugins:gradle-fixtures:latest.integration') {
+		capabilities {
+			requireCapability('dev.gradleplugins:gradle-fixtures-spock-support')
+		}
+	}
+
     // Use the awesome Spock testing and specification framework
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 }
