Set compatibility to Java 1.8

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'dev.gradleplugins.groovy-gradle-plugin'
 }
 
+java {
+	sourceCompatibility = JavaVersion.VERSION_1_8
+	targetCompatibility = JavaVersion.VERSION_1_8
+}
+
 repositories {
     // Use jcenter for resolving dependencies.
     // You can declare any Maven/Ivy/file repository here.
