--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 plugins {
-    // Apply the groovy plugin to add support for Groovy
     id 'dev.gradleplugins.groovy-gradle-plugin'
+	id 'maven-publish'
 }
+
+group = 'dev.nokee'
+version = '1.0'
 
 java {
 	sourceCompatibility = JavaVersion.VERSION_1_8
@@ -9,8 +12,6 @@ java {
 }
 
 repositories {
-    // Use jcenter for resolving dependencies.
-    // You can declare any Maven/Ivy/file repository here.
     jcenter()
 }
 repositories {
@@ -18,8 +19,7 @@ repositories {
 }
 
 dependencies {
-    // Use the latest Groovy version for building this library
-    implementation 'org.codehaus.groovy:groovy-all:2.5.8'
+    compileOnly 'org.codehaus.groovy:groovy-all:2.5.8'
 	compileOnly 'dev.gradleplugins:gradle-api:6.2.2'
 
 	testImplementation('dev.gradleplugins:gradle-fixtures:latest.integration') {
@@ -27,13 +27,12 @@ dependencies {
 			requireCapability('dev.gradleplugins:gradle-fixtures-spock-support')
 		}
 	}
+    testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 
 	// TODO: Should be coming from gradle-fixtures
 	functionalTestImplementation 'com.google.guava:guava:28.2-jre'
 	functionalTestImplementation 'org.apache.ant:ant:1.9.13'
 
-    // Use the awesome Spock testing and specification framework
-    testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 }
 
 
