--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,20 @@ java {
 
 repositories {
     jcenter()
-}
-repositories {
     maven { url = uri("https://dl.bintray.com/gradle-plugins/distributions") }
+}
+
+sourceSets {
+	docsTest
+}
+tasks.register("docsTest", Test) {
+	dependsOn('publishToMavenLocal')
+	group = LifecycleBasePlugin.VERIFICATION_GROUP
+	classpath = sourceSets.docsTest.runtimeClasspath
+	testClassesDirs = sourceSets.docsTest.getOutput().getClassesDirs()
+}
+configurations {
+	docsTestImplementation.extendsFrom(testImplementation)
 }
 
 dependencies {
@@ -32,13 +43,12 @@ dependencies {
 		}
 	}
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
+	docsTestImplementation gradleTestKit() // TODO: Should not be needed
 
 	// TODO: Should be coming from gradle-fixtures
 	functionalTestImplementation 'com.google.guava:guava:28.2-jre'
 	functionalTestImplementation 'org.apache.ant:ant:1.9.13'
-
 }
-
 
 gradlePlugin {
     plugins {
